# MostDetrimentalNodeFinder

./: .gitignore  LICENSE  README.md  path_sim.Rmd  pyproject.toml  setup.cfg  setup.py
node_finder/: __main__.py
tests/: test_complex.py  test_example.py  test_infinity.py  test_many.py  test_no_node.py  test_nopath.py  test_simple.py
yeast_graph/: read_yeast.py
