[metadata]
name = node_finder
description = Find a node that, when removed, will cause the most damage to a shortest path between two vertices in a directed graph
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/cguccione/MostDetrimentalNodeFinder
license = MIT
license_file = LICENSE
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
project_urls = 
    Documentation = https://github.com/cguccione/MostDetrimentalNodeFinder#mostdetrimentalnodefinder
    Source = https://github.com/cguccione/MostDetrimentalNodeFinder
    Tracker = https://github.com/cguccione/MostDetrimentalNodeFinder/issues

[options]
packages = find:
platforms = any
install_requires = 
    python-igraph
    sortedcontainers
    pandas
    click

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    nodefinder = node_finder.__main__:main
